--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,1 +1,1 @@
-\noindent This paper studies the life-cycle impacts of a high-quality, intensive, and widely emulated early childhood program that started early in life (at 8 weeks of age) and had a randomized design. This program, like many, generates a variety of treatment effects. We construct a variety of aggregate statistics of treatment effects. Girls have more statistically significant treatment effects than boys and the magnitudes are generally bigger. The source of this difference is worse control-group conditions for girls resulting from more severe socio-economic disadvantage at baseline. Fathers of sons are more likely to support the spouse than fathers of daughters. \textbf{[Word count: 99 words]}
+\noindent This paper studies the life-cycle impacts of a high-quality intensive, and widely emulated early childhood program that starts early in life (at 8 weeks of age) and had a randomized design. This program, like many, generates treatment effects. We construct a variety of aggregates of treatment effects. Girls have more statistically significant treatment effects than boys and the magnitudes of effect sizes are generally bigger. The source of this difference is worse control-group conditions for girls resulting from more severe socio-economic disadvantage at baseline. Fathers of sons are more likely to support spouses than fathers of daughters.
