--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,34 +1,34 @@
 This paper examines the impacts by gender of two closely related and influential early childhood programs: the Carolina Abecedarian Project (ABC) and its sister program, the Carolina Approach to Responsive Education (CARE), henceforth ABC/CARE. Both were evaluated by the method of random assignment. While specific categories of outcomes of ABC/CARE have been studied, our paper is the first to aggregate and summarize all of the reported outcomes to evaluate the program.
 
-ABC/CARE was conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. It was a pioneering program that focused intensively on the early years of disadvantaged children. It is a template for many current and proposed early childhood programs.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: the Infant Health and Development Program (IHDP)---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control children were followed through their mid 30s, with data collected on multiple dimensions of human development with over 100 reported program outcomes.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Anderson_2008_JASA,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. Only \citet{Anderson_2008_JASA} and \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} estimate separate treatment effects by gender. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} only use health data, and find that men are more affected by ABC/CARE than women. \citet{Anderson_2008_JASA} constructs factors using data up to the age-21 collection and finds that women benefit more than men, but does not use the crime, health, and employment data used in our paper. }
+ABC/CARE was conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. It was a pioneering program that focused on the early years of disadvantaged children. It is a template for many current and proposed early childhood programs.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: the Infant Health and Development Program (IHDP)---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control children were followed through their mid 30s, with data collected on multiple dimensions of human development with over 100 reported program outcomes.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Anderson_2008_JASA,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. Only \citet{Heckman_2006_Science}, \citet{Anderson_2008_JASA} and \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} note separate treatment effects by gender. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} only use health data, and find that men are more affected by ABC/CARE than women. \citet{Anderson_2008_JASA} constructs factors using data up to the age-21 collection and finds that women benefit more than men, but does not use the crime, health, and employment data used in our paper. }
 
-To avoid cherry-picking and reporting outcomes with ``significant'' treatment effects, we analyze aggregates of treatment effects by age and over all ages. We analyze different age-appropriate outcomes documented below. Table~\ref{table:summary} previews our analysis. Panel (a) displays our summaries for early-childhood outcomes (birth to age 5). We present four treatment-control comparisons across these outcomes by gender: (i) the average effect size of the outcomes within an age category; (i) the percentage of outcomes for which there is a positive treatment effect; (iii) the percentage of outcomes for which there is a positive and statistically significant treatment effect;\footnote{We perform inference at the 10\% level throughout this paper due to our sample size. However, we also display the $p$-values below so that the reader can qualify the conclusions at different significance levels.} and (iv) the $p$-value resulting from an exact non-parametric test comparing the joint distribution of outcomes \citep{Rosenbaum_2005_Distribution_JRSS}. Panels (b) and (c) report school age (ages 6 to 18) and adulthood (21 to 35) outcomes, respectively, and Panel (d) includes outcomes over all ages.
+To avoid cherry-picking and reporting outcomes with ``significant'' treatment effects, we analyze aggregates of treatment effects by age and over all ages. We analyze different age-appropriate outcomes documented below. Table~\ref{table:summary} previews our analysis. Panel (a) displays our summaries for early-childhood outcomes (birth to age 5). We present four treatment-control comparisons across these outcomes by gender: (i) the average effect size of the outcomes within an age category; (ii) the percentage of outcomes for which there is a positive treatment effect; (iii) the percentage of outcomes for which there is a positive and statistically significant treatment effect;\footnote{We perform inference at the 10\% level throughout this paper due to our sample size. However, we also display the $p$-values below so that the reader can qualify the conclusions at different significance levels.} and (iv) the $p$-value resulting from an exact non-parametric test comparing distributions of outcomes \citep{Rosenbaum_2005_Distribution_JRSS}. Panel (a) reports outcomes for children (0-6). Panels (b) and (c) report school age (ages 6 to 18) and adulthood (21 to 35) outcomes, respectively, and Panel (d) includes outcomes over all ages.
 
 
 \begin{table}[!htpb]
 \begin{threeparttable}
 \caption{Summary of Treatment-Control Comparisons by Gender} \label{table:summary}
-\centering 
+\centering
 \begin{tabularx}{16.5cm}{XcX}
-& \input{output/raw-rosenbaum-table-age-exp_editedTvC.tex} & 
+& \input{output/raw-rosenbaum-table-age-exp_editedTvC.tex} &
 \end{tabularx}
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by age and gender. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. We explain these statistics in more detail below. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution  across treatment status of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
+\item \textbf{Note:} This table displays summaries of treatment effects by age and gender. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured between 21 and 35. All (panel d) is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect sizes of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. We explain these statistics in more detail below. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value is from a test of equality of distributions across treatment statuses of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. Additional discussion on our inference procedures is presented in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
-Table~\ref{table:summary} reveals that participation in ABC/CARE benefited both females and males across the life cycle. Across the life cycle, the average effect size for females is $0.381$, the percentage of positive treatment effects is $94\%$, and the percentage of significant treatment effects at the $10\%$ level is $63\%$. For males, the average effect size is $0.254$, the percentage of positive treatment effects is $78\%$, and the percentage of significant treatment effects at the $10\%$ level is $41\%$. We also present $p$-values from an exact non-parametric test of equality of the treatment and control distributions. All measures consistently show beneficial effects of the program. 
+Table~\ref{table:summary} reveals that participation in ABC/CARE benefited both females and males across the life cycle. Across the life cycle, the average effect size for females is $0.381$, the percentage of positive treatment effects is $94\%$, and the percentage of treatment effects significant at the $10\%$ level is $63\%$. For males, the average effect size is $0.254$, the percentage of positive treatment effects is $78\%$, and the percentage of significant treatment effects at the $10\%$ level is $41\%$. We also present $p$-values from an exact non-parametric test of equality of the treatment and control distributions. All measures consistently show beneficial effects of the program.
 
-Table~\ref{table:summary} also reveals that in terms of effect sizes over multiple outcomes, girls benefit more than boys. This holds across the life cycle and for all of the summary measures.\footnote{This finding of females benefitting more than males (except in health) is consistent with previous work studying the gender differences in early childhood education. We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is common. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}} The gender treatment effects arise because control-group girls grow up in less favorable environments compared to control-group boys. Specifically, in the homes of girls, fewer fathers are present and maternal education and IQ are lower. Girls in the control group who stay at home ($27\%$ of the control-group girls), were raised in more disadvantaged environments. Girls who went to preschools other than ABC/CARE ($73\%$ of the control-group girls), likely went to lower-quality preschools because their families were more resource constrained compared to their male counterparts for whom more fathers are present \textbf{[JJH: Do we really know this?][We added a footnote to better explain this point. We know that the alternative preschools were lower quality than ABC/CARE and we know that girls were more resource constrained. We don't have direct evidence that girls went to lower-quality alternatives than boys. Our measures of the quality of individual preschools come from Peg's recollection and some historical documentation of federal standards. Although these are qualitatively interesting and point to the conclusion that the alternatives are lower quality than ABC/CARE, we cannot precisely determine who went to a better or worse quality alternative.]}.\footnote{We do not have precise measures of the quality of individual alternative preschools, although we do show that girls were more disadvantaged. This implies that their families would have fewer resources to send them to relatively better alternative preschools.} Thus, girls benefited more from treatment because they would have otherwise grown up in more disadvantaged environments.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} show that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this evidence with historical records showing that even the alternatives that followed state and federal standards of the era were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
+Table~\ref{table:summary} also reveals that in terms of effect sizes over multiple outcomes, girls benefit more than boys. This holds across the life cycle and for all of the summary measures.\footnote{This finding of females benefitting more than males (except in health) is consistent with previous work studying the gender differences in early childhood education. We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is a common practice. Examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}} The gender treatment effects by gender arise because control-group girls grow up in less favorable environments compared to control-group boys. Specifically, in the homes of girls, fewer fathers are present and maternal education and IQ are lower. Girls in the control group who stay at home ($27\%$ of the control-group girls), were raised in more disadvantaged environments. Girls who went to preschools other than ABC/CARE ($73\%$ of the control-group girls), likely went to lower-quality preschools because their families were more resource constrained compared to their male counterparts for whom more fathers are present.\footnote{We do not have precise measures of the quality of individual alternative preschools, although we do know that girls were more disadvantaged. This implies that their families would have fewer resources to send them to relatively better alternative preschools.} Thus, girls benefited more from treatment because they would have otherwise grown up in more disadvantaged environments.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} show that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this evidence with historical records showing that even the alternatives that followed state and federal standards of the era were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
 
-There is an important difference in the within-gender take-up of alternatives (families randomized to the control group have multiple child care alternatives). Among control-group girls, the more disadvantaged stayed at home. Among control-group boys, the relatively advantaged boys stayed at home more often instead of attending the lower-quality preschool alternatives. 
+There is an important difference in the within-gender take-up of alternatives (families randomized to the control group have multiple child care alternatives). Among control-group girls, the more disadvantaged stayed at home. Among control-group boys, the relatively advantaged boys are more likely to stay at home instead of attending the lower-quality preschool alternatives. \textbf{[JJH: Is this associated with lower mother's working?][It is actually the case that 14\% of the control-group boys who stay at home have working mothers and 0\% of the control-group girls who stay at home have working mothers. This most likely is related to the fact that 44\% of the control-group boys who stay at home have fathers present while only 30\% of the control-group girls who stay at home have fathers present. It of course could also be related to control-group boys who stay at home having older mothers than control-group girls who stay at home (23.67 vs. 19.40). These averages are in Table A.4 of the appendix. Gender differences in enrollment in alternative childcare is associated with the number of siblings with control-group boys who stay at home having an average of 1.56 siblings, while control-group boys who attend alternative childcare have an average of 0.54. For girls, the numbers are 0.5 siblings for those who stay at home and 0.7 for those who attend alternative childcare. The association between number of siblings and attending alternative childcare is a statistically significant determinant for boys but not for girls.]}
 
-These results are verified when we explicitly account for control group substitution. Boys benefit more from ABC/CARE when compared to alternative preschools, given their relatively better home environments. Girls benefit more from ABC/CARE when compared to home-based care, given that those who stay at home are more disadvantaged. 
+These results are confirmed when we explicitly account for control group substitution. Boys benefit more from ABC/CARE when compared to alternative preschools given their relatively better home environments. Girls benefit more from ABC/CARE when compared to home-based care, given that those who stay at home are more disadvantaged.
 
 %ABC/CARE greatly benefits children by providing an enriching environment to complement their home environments.  Dissecting the counterfactual brings our results to a modern context in which many children are enrolled in preschool, and in which low-quality center-based care is abundant, especially for children from socio-economic disadvantaged backgrounds.\footnote{Approximately 60\% of preschool-age children regularly receive non-parental childcare \citep{FIFCFS_2009_Wellbeing_REPORT}. At age 4, the child care break down for disadvantaged children, which compose 13\% of all children in the US \citep{USCB_2014_CoverageReport}, was the following. Head Start: 29\%; Non-Head Start center-based: 26\%; relative care: 15\%; non-relative care: 5\%; parental care: 25\%. While the quality of Head Start centers and family day care arrangements is constant across disadvantaged and advantaged children, the quality of the rest of arrangements is considerably and consistently lower for disadvantaged children \citep{FIFCFS_2009_Wellbeing_REPORT}.} Quality matters and low-quality programs could cause harm. This sounds a cautionary note for advocates of early childhood programs in any form.
 
-A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, presents a cost-benefit analysis of ABC/CARE, which produces a monetized summary of program treatment effects. While more statistically significant treatment effects are found for girls, the outcomes for boys result in reduced social cost, resulting in a larger rate of return for men relative to women. 
+A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, presents a cost-benefit analysis of ABC/CARE. It presents a monetized summary of program treatment effects. While more statistically significant treatment effects are found for girls, the outcomes for boys produce a greater reduction of social costs, resulting in a larger rate of return for men relative to women.
 
 Our analysis unfolds in the following way. Section~\ref{sec:data} describes our experimental data. We document the quality level of the alternative childcare that a considerable proportion of the control-group subjects attended. Section~\ref{sec:parameters} defines the treatment effects we estimate and how we summarize them. Section~\ref{sec:treatment-effects} reports the treatment effects overall and by gender and establishes the existence of sharp gender differences for many categories of outcomes. Section~\ref{sec:gender-differences} discusses the sources of these differences. Section~\ref{sec:conclusion} concludes.
