--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -11,14 +11,14 @@ Both interventions involved intensive center-based care for subjects in the trea
 \begin{tablenotes}
 \footnotesize
 \item \textbf{Note:} Characteristics that do not specify ABC or CARE were present in both. Biologically healthy includes lack of serious illness, including mental retardation. HRI is the High Risk Index. This table is adapted from \citet{Elango_Hojman_etal_2016_Early-Edu}. \\
-\item \textbf{Sources:} \citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Ramey_Smith_1977_AJMD,Ramey_etal_1985_Project-CARE_TiECSE,Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}. 
+\item \textbf{Sources:} \citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Ramey_Smith_1977_AJMD,Ramey_etal_1985_Project-CARE_TiECSE,Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
 The program focused on developing language, cognition, and social-emotional skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined \citep{Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}. Other curricula used in the program emphasized child-led learning of skills important for future learning \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}. The teachers and classroom aids were trained continuously throughout the intervention. Researchers and child development experts at FPG observed the classroom interactions and relayed detailed feedback to the instructors \citep{Ramey-etal_2012-ABC}.\footnote{These aspects of the program relate to structural quality rather than process quality, i.e., the daily experiences of the children \citep{Thomason_LaParo_2009_EED}. Aspects of structural quality, including low child-teacher ratios, small group sizes, and teacher education, are often associated with high process quality \citep{Phillipsen_etal_1997_ECRQ}. However, recent studies find that curricula and professional development are even more highly correlated with process quality. This is especially true if the curricula and professional development are informed by knowledge of child development \citep{Slot_etal_2015_Dutch_ECRQ}. Although measures of process quality (e.g., measures of teacher-child interactions) are not available for the ABC/CARE subjects, the curricula and professional development offerings were exceedingly intensive, especially compared to standards of that era \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.}
 
-CARE included an additional arm of treatment. Besides the services offered in ABC, those in the CARE treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. To individually test this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component, but not center-based care \citep{Wasik_Ramey_etal_1990_CD}. In light of previous analyses of CARE finding no effect of the home-visiting component, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citet{Burchinal_etal_2006_MSRCD_IV-Growth-Curve} test and do not reject the hypothesis of no treatment effects for this additional component of CARE.} These analyses justify merging the treatment groups of ABC and CARE. We henceforth analyze the samples as coming from a single ABC/CARE program.
+CARE included an additional arm of treatment. Besides the services offered in ABC, those in the CARE treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. To individually test this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component, but not center-based care \citep{Wasik_Ramey_etal_1990_CD}. In light of previous analyses of CARE finding no effect of the home-visiting component, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citet{Burchinal_etal_2006_MSRCD_IV-Growth-Curve} test and do not reject the hypothesis of no treatment effects for this additional component of CARE. This evidence for home visiting at the later ages is not inconsistent with the evidence on the effectiveness of home visits for earlier ages \citet{Doyle_2017_School,Gertler_Heckman_etal_2014_Science}.} These analyses justify merging the treatment groups of ABC and CARE. We henceforth analyze the samples as coming from a single ABC/CARE program.
 
 Table~\ref{tab:abccare-baseline} compares pre-program variables for experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. However, after accounting for multiple hypothesis testing using the Holm test, the difference in HRI score is no longer statistically significant.\footnote{See \citet{Holme_1979_Sequential_SJS} for a description of the test. For a more detailed discussion, see Appendix~\ref{app:eligibility-pop}.}
 
@@ -37,11 +37,11 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables for experimental
 
 \subsection{The Randomization Protocol} \label{section:randomization}
 
-Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups. For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program. Pairing was based on the High Risk Index, as well as maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} 
+Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups. For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program. Pairing was based on the High Risk Index, as well as maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.}
 
-ABC collected an initial sample of 121 subjects. All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Encouragement from the referral agencies was such that all but one of the referred mothers agreed to participate in the initial randomization \citep{Ramey_Yeates_Short_1984_CD,Campbell_Ramey_1995_AERJ}.  We characterize each missing observation in Appendix~\ref{appendix:randomization}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting (matching) methods described in Appendix~\ref{app:method_partialobs}. 
+ABC collected an initial sample of 121 subjects. All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Encouragement from the referral agencies was such that all but one of the referred mothers agreed to participate in the initial randomization \citep{Ramey_Yeates_Short_1984_CD,Campbell_Ramey_1995_AERJ}.  We discuss each missing observation in Appendix~\ref{appendix:randomization}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting (matching) methods described in Appendix~\ref{app:method_partialobs}.
 
-Twenty-two subjects in ABC did not stay in the program through age 5. The number of dropouts is evenly balanced across treatments and controls. Dropout was primarily related to the health of the child and the mobility of families rather than as a result of  dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed \citep{Burchinal_Campbell_etal_1997_CD} Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. Dropping out occurs \emph{after} randomization and is balanced across treatment groups. We conduct the same analysis for the CARE sample, although there were far fewer dropouts and no compromised randomization.\footnote{The modest sample size after dropouts, especially after dividing the sample by male and female, is unavoidable. No datasets have the experimental design and longitudinal data collection of ABC/CARE with a large sample. Future research should repeat these analyses in larger studies (e.g., the Infant Health and Development Program) as the subjects continue to age.} 
+Twenty-two subjects in ABC did not stay in the program through age 5. The number of dropouts is evenly balanced across treatments and controls. Dropout was primarily related to the health of the child and the mobility of families rather than as a result of  dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed \citep{Burchinal_Campbell_etal_1997_CD} Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. Dropping out occurs \emph{after} randomization and is balanced across treatment groups. We conduct the same analysis for the CARE sample, although there were far fewer dropouts and no compromised randomization.\footnote{The modest sample size after dropouts, especially after dividing the sample by male and female, is unavoidable. No datasets have the experimental design and longitudinal data collection of ABC/CARE with a large sample. Future research should repeat these analyses in larger studies (e.g., the Infant Health and Development Program) as the subjects continue to age.}
 
 \subsection{Control Group Substitution}
 
@@ -66,13 +66,13 @@ Note: Panel (a) displays the cumulative distribution function of enrollment in a
 
 Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportion of time in the first five years that control subjects were enrolled in alternatives. Figure~\ref{fig:proportion-alt-pre} shows the dynamics of enrollment. Those who enrolled generally stay enrolled over time. As control-group children aged, they were more likely to enter childcare (see Figure~\ref{fig:control-sub_a} in Appendix~\ref{app:control-subbb}).
 
-Children in the control group enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home, as measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index defining ABC/CARE eligibility. Children who attend lower-quality alternative care have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (statistically significant at 10\%). Parents of girls are much more likely to use alternative center childcare if assigned to the control group. Table~\ref{table:controlsubscharacteristics} tests differences across these variables between children in the control group who attended and those who did not attend alternative childcare. 
+Children in the control group enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home, as measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index defining ABC/CARE eligibility. Children who attend lower-quality alternative care have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (statistically significant at 10\%). Parents of girls are much more likely to use alternative center childcare if assigned to the control group. Table~\ref{table:controlsubscharacteristics} tests differences across these variables between children in the control group who attended and those who did not attend alternative childcare.
 
-The only statistically significant difference in observed baseline characteristics between the controls who use formal childcare and those who stay at home is on whether the mother works. For children attending alternative care, the mother is more likely to work. This is especially true for female subjects. For male subjects, the labor supply of the mothers is statistically the same with 14\% (s.e. 14\%) of the mothers working for boys who stay at home and 29\% (s.e. 11\%) for boys in alternative care. This is consistent with a higher percentage of fathers being present when the subject is male. We discuss the selection into alternative care settings by gender extensively in Section~\ref{sec:gender-differences}.
+The only statistically significant difference in observed baseline characteristics between the controls who use formal childcare and those who stay at home is on whether the mother works. For children attending alternative care, the mother is more likely to work. This is especially true for female subjects. For male subjects, the labor supply of the mothers is virtually the same with 14\% (s.e. 14\%) of the mothers working for the boys who stay at home and 29\% (s.e. 11\%) for boys in alternative care. This is consistent with a higher percentage of fathers being present when the subject is male. We discuss the selection into alternative care settings by gender extensively in Section~\ref{sec:gender-differences}. \textbf{[JJH: What is \% for girls?][Of the control-group girls who stay at home, 0\% (s.e. 0\%) of the mothers work. Of the control-group girls who attend alternative childcare, 23\% (s.e. 9\%) of the mothers work. This is a statistically significant difference.]}
 
-While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low-quality compared to ABC/CARE \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}. In terms of child-staff ratios, ABC/CARE far exceeded the highest state and federal standards of the day.\footnote{Appendix~\ref{appendix:tetanus} shows this and discusses the standards of the day \citep{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach,Burchinal_Campbell_etal_1997_CD}} We do not have baseline information on the quality of the parent-child interaction to be able to precisely analyze the environments of those who stayed at home. \textbf{[JJH: We know they have higher income!][Yes, we know the baseline characteristics of the household in a broad way, but we do not have baseline measures of parent-child interaction. We clarified this in the preceding sentence.]}
+While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low-quality compared to ABC/CARE \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}. In terms of child-staff ratios, ABC/CARE far exceeded the highest state and federal standards of the day.\footnote{Appendix~\ref{appendix:tetanus} shows this and discusses the standards of the day \citep{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach,Burchinal_Campbell_etal_1997_CD}} We do not have baseline information on the quality of the parent-child interaction to be able to precisely analyze the environments of those who stayed at home.
 
-When we compare ABC/CARE treatment to the alternative preschools, ABC/CARE has substantial treatment effects. Given the full compliance, parents clearly perceived that ABC/CARE was superior to the alternative preschools. The access of control-group children to alternative programs creates both a problem of substitution bias \citep{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE, Kline_Walters_2016_QJE} and an opportunity to learn about the benefits or harms of lower-quality childcare arrangements. With the heterogeneous experiences of the control-group subjects, we can separately compare the effect of an enriched treatment against home and lower-quality center environments. 
+When we compare ABC/CARE treatment to the alternative preschools, ABC/CARE produces substantial treatment effects. Given full compliance, parents clearly perceived that ABC/CARE was superior to alternative preschools. The access of control-group children to alternative programs creates both a problem of substitution bias \citep{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE, Kline_Walters_2016_QJE} and an opportunity to learn about the benefits or harms of lower-quality childcare arrangements. With the heterogeneous experiences of the control-group subjects, we can separately compare the effect of developmentally enriched environments against home and lower-quality center environments.
 
 \subsection{Data Collection}
 
